сделал новое меню и кновку назад осталось дизайн и везде добавить НАЗАД

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,9 @@
     <string name="title_activity_object2">Object2Activity</string>
     <string name="title_activity_home_work">HomeWorkActivity</string>
     <string name="title_activity_note">NoteActivity</string>
+    <string name="about">about</string>
+    <string name="settings">settings</string>
+    <string name="exit">exit</string>
+    <string name="open">open</string>
+    <string name="close">close</string>
 </resources>
