--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,6 @@
     <string name="exit">exit</string>
     <string name="open">open</string>
     <string name="close">close</string>
+    <string name="forgotPassword"><u>Forgot your password?</u></string>
+
 </resources>
